--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-Flask==3.0.2
-gunicorn==21.2.0
-line-bot-sdk==2.5.2
-requests==2.32.3
-beautifulsoup4==4.12.3
-lxml==5.2.2
+Flask>=2.3,<3
+line-bot-sdk>=2.4,<3
+gunicorn>=21,<22
+requests>=2.31,<3
