--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==3.0.3
-gunicorn==21.2.0
-line-bot-sdk==2.5.1
-requests==2.32.3
-beautifulsoup4==4.12.3
-lxml==5.2.2
+flask
+gunicorn
+line-bot-sdk>=2.4,<3.0
+requests
+beautifulsoup4
+lxml
