--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==3.0.3
-gunicorn==21.2.0
-requests==2.32.3
-beautifulsoup4==4.12.3
-lxml==5.2.2
-line-bot-sdk>=3,<4
+flask
+gunicorn
+requests
+beautifulsoup4
+lxml
+line-bot-sdk>=3.8.0,<4.0
