--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-requests
-beautifulsoup4
-lxml
+Flask==3.0.3
+gunicorn==22.0.0
+
+line-bot-sdk==3.0.0
+
+requests==2.32.3
+beautifulsoup4==4.12.3
+lxml==5.2.2
+html5lib==1.1
