--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-Flask==3.0.3
-gunicorn==22.0.0
+flask>=3.0
+gunicorn>=21.2
+beautifulsoup4>=4.12
+lxml>=5.2
+httpx>=0.27
 
-line-bot-sdk==3.0.0
+# LINE SDK は v2 系の最終版に固定（app.py が v2 API のため）
+line-bot-sdk==2.4.3
 
-requests==2.32.3
-beautifulsoup4==4.12.3
-lxml==5.2.2
-html5lib==1.1
+# 使っている場合のみ。不要なら消してOK
+openai==0.28.1
