--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
 Flask==3.0.3
+Werkzeug==3.0.3
+itsdangerous==2.2.0
+Jinja2==3.1.4
+click==8.1.7
+
 gunicorn==22.0.0
+
 line-bot-sdk==3.11.0
+httpx==0.27.2
+httpcore==1.0.5
+h11==0.14.0
+anyio==4.4.0
+sniffio==1.3.1
+idna==3.7
+
 requests==2.32.3
 beautifulsoup4==4.12.3
