--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,21 @@
+# --- Web ---
 Flask==3.0.3
-Werkzeug==3.0.3
-itsdangerous==2.2.0
-Jinja2==3.1.4
-click==8.1.7
+gunicorn==21.2.0
 
-gunicorn==22.0.0
-
+# --- LINE SDK（aiohttp を使う版）---
 line-bot-sdk==3.11.0
-httpx==0.27.2
-httpcore==1.0.5
-h11==0.14.0
-anyio==4.4.0
-sniffio==1.3.1
-idna==3.7
+aiohttp==3.10.10
 
-requests==2.32.3
+# --- スクレイピング系 ---
+requests==2.31.0
 beautifulsoup4==4.12.3
+lxml==5.2.2
+html5lib==1.1
+
+# --- （使っていれば）OpenAI ---
+openai==0.28.1
+
+# --- （使っていれば）Google Vision OCR ---
+google-cloud-vision==3.7.2
+google-auth==2.33.0
+google-auth-httplib2==0.2.0
