--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-Flask==3.0.2
-gunicorn==21.2.0
+flask==3.0.3
+gunicorn==22.0.0
 
-# LINE
+# LINE Bot SDK（3.x系）。aiohttpはSDKが適切な版を入れるので“自分では”固定しない
 line-bot-sdk==3.11.0
-# Python 3.11 で安定するレンジ（3.12未満）
-aiohttp>=3.9.5,<3.12
 
 # スクレイピング
-requests==2.31.0
 beautifulsoup4==4.12.3
 lxml==5.2.2
+httpx==0.27.2
