--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
 flask==3.0.3
 gunicorn==22.0.0
+
+# LINE Bot SDK v3 系（aiohttp依存を回避した実績レンジ）
 line-bot-sdk==3.11.0
+
+# スクレイピング
 httpx==0.27.2
 beautifulsoup4==4.12.3
 lxml==5.2.2
+
+# 叙述文（任意）
+openai>=1.35.10
