--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==3.0.3
 line-bot-sdk==3.11.0
-requests==2.32.3
+requests==2.31.0    # ← 2.32.3 から 2.31.0 に合わせる
 beautifulsoup4==4.12.3
 gunicorn==22.0.0
